--- a/ChatApp/templates/index.html
+++ b/ChatApp/templates/index.html
@@ -9,7 +9,7 @@
       width="56"
       alt=""
     />
-    <p>Name</p>
+    <p> </p>
   </div>
   <div class="logo">
     <img
@@ -85,9 +85,9 @@
       height="360"
     />
   </div>
-  <div id="footer">
+  <!-- <div id="footer">
     <p id="footer-text">PLAUDERN FROM RARETECH</p>
-  </div>
+  </div> -->
 
   {% include 'modal/add-channel.html' %} {% include 'modal/delete-channel.html'
   %}
