--- a/ChatApp/templates/modal/alarm-modal.html
+++ b/ChatApp/templates/modal/alarm-modal.html
@@ -4,7 +4,7 @@
       <h2>おやすみ設定</h2>
       <span class="modalClose" id="alarm-close-button">×</span>
     </div>
-    <form name="setAlarmForm" class="modal-body" action="/" method="POST">
+    <form name="setAlarmForm" class="modal-body" action="/alarm" method="POST">
       <!-- <p>おやすみ時間</p>
       <input
         type="radio"
