--- a/ChatApp/templates/modal/alarm-modal.html
+++ b/ChatApp/templates/modal/alarm-modal.html
@@ -23,6 +23,7 @@
         <option value="22:30">22:30</option>
         <option value="23:00">23:00</option>
         <option value="23:30">23:30</option>
+        <option value="00:00">24:00</option>
       </select>
       <p>
         ※初期設定は２２時です。<br />
