--- a/ChatApp/templates/modal/add-channel.html
+++ b/ChatApp/templates/modal/add-channel.html
@@ -14,7 +14,7 @@
       />
       <input
         type="text"
-        placeholder="説明"
+        placeholder="description"
         class="modal-form-input"
         name="channelDescription"
       />
